--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,11 @@
-<% @users.each do |user| %>
- <li>
-    <%= link_to user_url(user), id: "user_container" do %>
-      <%= render partial: "users/user_info", locals: { user: user } %>
+<% if @users.present? %>
+    <% @users.each do |user| %>
+    <li>
+        <%= link_to user_url(user), id: "user_container" do %>
+        <%= render partial: "users/user_info", locals: { user: user } %>
+        <% end %>
+    </li>
     <% end %>
-  </li>
+<% else %>
+  <p>No users found.</p>
 <% end %>
