--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Posts</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-    <h1>Here is a selected user</h1>
+<div id="user_container">
+  <%= render partial: "users/user_info", locals: { user: @user } %>
+</div>
 
-        <script src="" async defer></script>
-    </body>
-</html>
+<div id="user_bio">
+  <h3>Bio</h3>
+  <p><%= @user.bio %></p>
+</div>
+
+<div id="post_container">
+  <% @user.three_recent_posts.each_with_index do |post, i| %>
+    <li>
+      <%= link_to "/users/#{@user.id}/posts/#{post.id}", id: "post" do %>
+        <%= render partial: "posts/post_info", locals: { post: post } %>
+      <% end %>
+    </li>
+  <% end %>
+</div>
+
+<%= link_to "See all posts", "/users/#{@user.id}/posts?page=1" %>
