--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -23,7 +23,7 @@
   }
   
   #container {
-    background-color: rgb(54, 54, 54);
+    background-color: rgb(77, 76, 76);
     padding: 1.5rem;
     min-height: 100vh;
   }
@@ -45,6 +45,13 @@
     border: 1px solid rgb(94, 95, 97);
     background-color: rgb(47, 48, 49);
     color: rgb(209, 209, 209);
+  }
+
+  p {
+    font-size: 2rem;
+    position: relative;
+    padding: 1rem;
+    color: rgb(143, 56, 56);
   }
   
   h2 {
