--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -46,6 +46,13 @@
     background-color: rgb(47, 48, 49);
     color: rgb(209, 209, 209);
   }
+
+  .no-users {
+    font-size: 2rem;
+    position: relative;
+    padding: 1rem;
+    color: rgb(143, 56, 56);
+  }
   
   h2 {
     color: rgb(240, 240, 240);
