--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
-<% if @users.present? %>
-    <% @users.each do |user| %>
-    <li>
-        <%= link_to user_url(user), id: "user_container" do %>
+<% if @users.any? %>
+  <ul>  <% @users.each do |user| %>
+      <li>
+        <%= link_to user_url(user), id: "user_container" do %> 
         <%= render partial: "users/user_info", locals: { user: user } %>
         <% end %>
-    </li>
+      </li>
     <% end %>
+  </ul>
 <% else %>
-  <p>No users found.</p>
-<% end %>
+  <p class="no-users">No users found.</p> <% end %>
