--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -14,9 +14,9 @@
     </head>
     <body>
        
-      <div id = "container">
+      <section class = "container">
         <%= yield -%>
-      </div>
+      </section>
         
         <script src="" async defer></script>
     </body>
