--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -29,7 +29,8 @@
   }
   
   .container,
-  .recent-posts {
+  .recent-posts,
+  #post_container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
