--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
-<div id="user_container">
-   <%= render partial: "users/user_info", locals: { user: @user } %>
-</div>
+<section id="user_container">
+ <h2 class="user-name"><%= @user.name %></h2>
+  <%= render partial: "users/user_info", locals: { user: @user } %>
+</section>
 
 <ul id="post_container">
   <% @posts.each_with_index do |post, i| %>
@@ -9,7 +10,7 @@
         <%= render partial: "posts/post_info", locals: { post: post } %>
       <% end %>
       <ul id="comment_container">
-        <% post.five_recent_comments.each do |comment| %>
+        <% post.recent_comments.each do |comment| %>
           <li id="comment">
             <p><%= comment.user.name %>: <%= comment.text %></p>
           </li>
