--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,6 +6,10 @@
   <p><%= @post.text %></p>
 </div>
 
+<% flash.each do |name, msg| -%>
+  <%= content_tag :div, msg, class: name %>
+<% end -%>
+
 <ul id="comment_container">
   <% @post.comments.each do |comment| %>
     <li id="comment">
