--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,21 +1,10 @@
 <main class="page" id="post-form-page">
-  <div id="user-page">
-    <div class="btn-container">
-      <%= link_to "Home", root_path %>  <div class="back-link-container">
-        <%= link_to "Back", :back, class: "back-link" %>
-      </div>
-      <div class="users-link-container">
-        <%= link_to "Users", users_path, class: "users-link" %>
-      </div>
-    </div>
-  </div>
-
   <h1>Create a New Post</h1>
 
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, class: name %>  <% end %>
 
-  <%= form_with model: [:user, @post], url: user_create_post_path, method: :post, data: { turbo: false } do |f| %>
+  <%= form_with model: [:user, @post], data: { turbo: false }, local: true do |f| %>
     <div class="post-inputs">
       <%= f.label :title %>
       <%= f.text_field :title, required: true, pattern: ".{5,}", title: "Title must be at least 5 characters", placeholder: "Enter Post Title" %>
