Add like and comments link

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,3 +17,6 @@
     </li>
   <% end %>
 </ul>
+
+<%= render partial: "likes/like_action", locals: { post: @post } %>
+<%= link_to 'New Comment', new_user_post_comment_path(post_id: params[:id]) %>
