--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -2,7 +2,8 @@
   <div id="form-container">
     <h1>Add a Comment</h1>
 
-    <%= form_with model: [@user, @post, @comment], data: { turbo: false }, local: true do |f| %>
+    <%= form_with model: [:user, :post, @comment], data: { turbo: false }, local: true do |f| %>
+    <div>
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, class: name %>
       <% end %>
@@ -10,6 +11,7 @@
       <%= f.label :text, "Comment" %>
       <%= f.text_area :text, resize: "none", required: true, placeholder: "Enter your comment" %>
       <%= f.submit "Add Comment" %>
+    </div>
     <% end %>
   </div>
 </main>
