--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,7 @@
 <% end -%>
 
 <ul id="comment_container">
-  <% @post.comments.each do |comment| %>
+  <% @post.comments.includes([:user]).each do |comment| %>
     <li id="comment">
       <p><%= comment.user.name %>: <%= comment.text %></p>
     </li>
