--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -15,16 +15,25 @@
     <body>
        <main class="page" id="post-form-page">
   <div id="user-page">
-    <div class="btn-container">
-      <%= link_to "Home", root_path %>  <div class="back-link-container">
+      <div class="btn-container">
+      <%= link_to "Home", root_path %>  
+        <div class="back-link-container">
         <%= link_to "Back", :back, class: "back-link" %>
-      </div>
-      <div class="users-link-container">
-        <%= link_to "Users", users_path, class: "users-link" %>
-      </div>
+        </div>
+        <div class="users-link-container">
+          <%= link_to "Users", users_path, class: "users-link" %>
+        </div>
+         <div>
+        <% if current_user %>
+          <%= link_to "Sing out", destroy_user_session_path, 
+          'data-turbo-method': :delete %>
+        <% end %>
+          </div>
     </div>
   </div>
       <section class = "container">
+       <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
         <%= yield -%>
       </section>
         
