--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,4 +1,6 @@
-<img src=<%= user.photo %> id="user_photo" alt="a_user">
+<div id="user_photo",>
+  <%= image_tag(user.photo || "missing_avatar.png", alt: "a_user") %>
+</div>
 <div id="user_text">
   <h2><%= user.name %></h2><br>
   <p>Number of posts: <%= user.posts_counter.to_i %></p>
