--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -6,13 +6,19 @@
         <title>BlogApp</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <%= csrf_meta_tags %>
-        <%= csp_meta_tag %>
+          <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
 
-        <%= stylesheet_link_tag "style", "data-turbo-track": "reload" %>
-        <%= javascript_importmap_tags %>
+    <%= stylesheet_link_tag "style", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
     </head>
     <body>
+      <header>
+      <% if current_user %>
+        <%= link_to "Sing out", destroy_user_session_path, 
+        'data-turbo-method': :delete %>
+      <% end %>
+    </header>
        <main class="page" id="post-form-page">
   <div id="user-page">
       <div class="btn-container">
@@ -23,12 +29,6 @@
         <div class="users-link-container">
           <%= link_to "Users", users_path, class: "users-link" %>
         </div>
-         <div>
-        <% if current_user %>
-          <%= link_to "Sing out", destroy_user_session_path, 
-          'data-turbo-method': :delete %>
-        <% end %>
-          </div>
     </div>
   </div>
       <section class = "container">
