--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -13,24 +13,27 @@
           <%= javascript_importmap_tags %>
           </head>
     <body>
-      <header>
-      <% if current_user %>
-        <%= link_to "Sing out", destroy_user_session_path, 
-        'data-turbo-method': :delete %>
-      <% end %>
-    </header>
-       <main class="page" id="post-form-page">
-  <div id="user-page">
-      <div class="btn-container">
-      <%= link_to "Home", root_path %>  
-        <div class="back-link-container">
-        <%= link_to "Back", :back, class: "back-link" %>
-        </div>
-        <div class="users-link-container">
-          <%= link_to "Users", users_path, class: "users-link" %>
-        </div>
-    </div>
-  </div>
+        <main class="page" id="post-form-page">
+            <div id="user-page">
+            <div class="btn-container">
+              <div class="users-link-container">
+              <%= link_to "Home", users_path %>  
+              </div>
+              <div class="back-link-container">
+                <%= link_to "Back", :back, class: "back-link" %>
+              </div>
+              <div class="users-link-container">
+                <%= link_to "Users", users_path, class: "users-link" %>
+              </div>
+                <header>
+                  <% if current_user %>
+                    <%= link_to "Sing out", destroy_user_session_path, 
+                    'data-turbo-method': :delete %>
+                  <% end %>
+                </header>
+            </div>
+          </div>
+          </main>
       <section class = "container">
        <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
