--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -25,12 +25,14 @@
               <div class="users-link-container">
                 <%= link_to "Users", users_path, class: "users-link" %>
               </div>
-                  <header>
+                <header>
                     <% if current_user %>
                       <%= link_to "Sing out", destroy_user_session_path, 
                       'data-turbo-method': :delete %>
+                    <% else %>
+                      <%= link_to "Log in", new_user_session_path %>
                     <% end %>
-                  </header>
+                </header>
             </div>
           </div>
         <section class = "container">
